2009-10-14  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Use cache variables rather than AC_CHECK_FUNC.

2009-10-14  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Remove obselete configure tests.
	* sed/fmt.c: Assume limits.h is always present.
	* sed/utils.c: Assume vfprintf is always present.

2009-10-14  Yuri G. Kudryashov  <urkud.urkud@gmail.com> (tiny change)

	* testsuite/Makefile.tests: Override LC_ALL, not LANG.

2009-10-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/sed-in.texi (Invoking sed): Add index entries for --posix,
	-s, --separate.
	(Other Commands): Fix typo.
	* doc/sed.texi: Regenerate.

2009-09-07  Dmitry Chistikov <dd1email@gmail.com> (tiny change)

	* doc/sed-in.texi: Document how to separate commands.
	* doc/sed.texi: Regenerate.

2009-08-30  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot.conf: Add ssize_t.
	* configure.ac: Remove useless stuff, bump gettext requirement to 0.17.

2009-08-10  Bake Timmons  <b3timmons@speedymail.org> (tiny change)

	* doc/sed-in.texi: Fix typo.

2009-06-25  Paolo Bonzini  <bonzini@gnu.org>

	* execute.c: Do not copy ACLs until the file is copied.
	* utils.c (ck_mkstemp): Set a restrictive umask on temporary files.

2009-06-25  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot.conf: Add selinux-h.
	* execute.c: Copy over file creation context before creating a new file.

2009-06-15  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot.conf: Add memchr again.
	* gnulib: Update.

2009-06-11  Sergey Farbotka  <z8sergey8z@gmail.com>  (tiny change)

	* sed/execute.c (open_next_file): Fix off-by-one causing problems
	under Cygwin.

2009-05-11  Paolo Bonzini  <bonzini@gnu.org>

	* sed/compile.c (snarf_char_class): Fix logic bug with [[[ in regular
	expressions (and a possibly uninitialized use of variable delim stemming
	from the bug).  Uninitialized variable bug reported by Zhongxing Xu.
	* testsuite/brackets.good: New.
	* testsuite/brackets.inp: New.
	* testsuite/brackets.sed: New.